--- a/login.html
+++ b/login.html
@@ -17,16 +17,16 @@
 
         <h3 class="welcome">欢迎使用WE-SPORT</h3>
 
-        <form role="form" action="#">
+        <form role="form" action="php/DataBaseTool.php" method="post" onsubmit="return doSubmit(this)">
             <div class="row">
-                <div class="form-group col-md-2 col-md-offset-5">
-                    <input class="form-control" type="text" placeholder="用户名">
+                <div class="userName form-group col-md-2 col-md-offset-5">
+                    <input name="userName" id="userName" class="form-control" type="text" placeholder="用户名">
                 </div>
                 <div class="form-group col-md-2 col-md-offset-5">
-                    <input class="form-control" type="password" placeholder="密码">
+                    <input name="passWord" id="passWord" class="form-control" type="password" placeholder="密码">
                 </div>
                 <div class="form-group col-md-2 col-md-offset-5">
-                    <button class="btn btn-success" type="submit">登录</button>
+                    <button class="btn btn-success btn-block" type="submit">登录</button>
                 </div>
             </div>
         </form>
@@ -39,6 +39,10 @@
 
     </div>
 
+
+
+    <script src="js/jquery.min.js"></script>
+    <script src="js/login.js"></script>
 
 </body>
 </html>
