--- a/login.html
+++ b/login.html
@@ -23,21 +23,21 @@
     <div class="row">
         <div class="col-md-5 col-sm-5 col-xs-5"></div>
         <div class="col-md-2 col-sm-2 col-xs-2">
-            <h2 class="logo-name">SPORT</h2>
+            <h2 class="logo-name center-block">SPORT</h2>
         </div>
         <div class="col-md-5 col-sm-5 col-xs-5"></div>
     </div>
 
     <div class="row">
-        <div class="col-md-3 col-md-offset-5 col-sm-3 col-sm-offset-5 col-xs-3 col-xs-offset-5">
-            <h3 class="welcome">欢迎使用WE-SPORT</h3>
+        <div class="col-md-3 col-md-offset-5 col-sm-4 col-sm-offset-5 col-xs-3 col-xs-offset-5">
+            <h3 class="welcome center-block">欢迎使用WE-SPORT</h3>
         </div>
     </div>
 
 </div>
 
 
-<div class="row">
+<div class="row center-block">
     <form role="form" action="index.html" method="post" onsubmit="return doSubmit(this)">
         <div class="row login-name">
 
@@ -63,13 +63,13 @@
 </div>
 
 
-<div class="row login-register">
+<div class="row login-register center-block">
     <div class="col-md-3 col-md-offset-5 col-sm-3 col-sm-offset-5
                                         col-xs-3 col-xs-offset-5">
         <p class="forget-register">
             <a href="#">忘记密码了？</a>
             |
-            <a href="#">注册一个新账号</a>
+            <a href="register.html">注册一个新账号</a>
         </p>
     </div>
 </div>
